--- a/MasimongAssignment901019545/Destinations.html
+++ b/MasimongAssignment901019545/Destinations.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Destinations</title>
-    <link rel="stylesheet" href="Page 4.css">
+    <link rel="stylesheet" href="MasimongAssignment901019545/page 4.css">
 </head>
 <body>
     <header>
